tests/ui/concurrent_cached_non_result_return.stderr
error: #[concurrent_cached] plain return types are only supported for the default in-memory sharded stores. Use `Result<T, E>` when specifying `redis`, `disk`, or a custom `ty`/`create`.
 --> tests/ui/concurrent_cached_non_result_return.rs:4:21
  |
4 | fn my_fn(k: i32) -> i32 {
  |                     ^^^
